# ufactory_genesis

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.zh.md  pyproject.toml  requirements-lerobot.txt  requirements.txt
assets/urdf/bio_gripper/: README.md  bio_gripper.urdf  bio_gripper_movable_visual.urdf
assets/urdf/bio_gripper_g2/: README.md  bio_gripper_g2.urdf  bio_gripper_g2_movable_visual.urdf
assets/urdf/gripper_g2/: README.md  gripper_g2.urdf  gripper_g2_movable_visual.urdf
assets/urdf/lite6/: lite6.urdf  lite6_gripper_movable_visual.glb.urdf  lite6_visual.glb.urdf  (+4 more)
docs/: ROADMAP.md  multi_robot_compatibility.md  packaging_showcase_dev_plan.md  xarm6_verification.md
examples/: README.md  _bio_gripper_demo.py  _bio_gripper_g2_demo.py  _bootstrap.py  _gripper_demo.py  _lite6_gripper_demo.py  _packaging_scene.py  _robot_viewer.py  _standalone_gripper_viewer.py  arm_reach_env.py  fk_verify_robot.py  grasp_place_env.py  ik_verify_robot.py  packaging_showcase.py  verify_robot.py  view_robot_glb.py
examples/bio_gripper/: _bootstrap.py  view_bio_gripper_movable.py
examples/bio_gripper_g2/: _bootstrap.py  view_bio_gripper_g2_movable.py
examples/gripper_g2/: _bootstrap.py  view_gripper_g2_movable.py
examples/lite6/: _bootstrap.py  verify_lite6.py  view_lite6_glb.py
examples/lite6_gripper/: _bootstrap.py  view_lite6_gripper_movable.py
examples/uf850/: verify_uf850.py  view_uf850_glb.py
examples/xarm5/: _bootstrap.py  verify_xarm5.py  view_xarm5_glb.py
examples/xarm6/: _bootstrap.py  check_collision_mesh.py  dynamics_verify_real.py  fk_verify.py  ik_verify.py  run_fk_alignment_cycle.py  verify_xarm6.py  verify_xarm6_dynamics.py  view_xarm6_glb.py  xarm6_g2_showcase.py  xarm6_grasp_place_demo.py  xarm6_grasp_place_diag.py  xarm6_grasp_place_env.py  xarm6_grasp_place_eval.py  xarm6_grasp_place_train.py  xarm6_reach_env.py  xarm6_reach_train.py
examples/xarm7/: verify_xarm7.py  view_xarm7_glb.py
scripts/: README.md  analyze_gripper_assembly.py  capture_bio_gripper_keyframes.py  capture_gripper_keyframes.py  capture_showcase_keyframes.py  capture_startup_motion_keyframes.py  diagnose_gripper_frames.py  diagnose_gripper_knuckle.py  diagnose_gripper_orientation.py  diagnose_gripper_parts.py  diagnose_gripper_shell.py  diagnose_knuckle_genesis.py  diagnose_knuckle_pipeline.py  diagnose_knuckle_rz90.py  diagnose_knuckle_rz90_link6.py  gen_kinematics_params.py  generate_bio_gripper_combo_urdf.py  generate_bio_gripper_g2_combo_urdf.py  generate_gripper_g2_combo_urdf.py  generate_lite6_gripper_combo_urdf.py  generate_lite6_physics_combo_urdf.py  generate_lite6_vacuum_gripper_combo_urdf.py  generate_showcase_textures.py  relocalize_arm_glb.py  relocalize_bio_gripper_g2_glb.py  relocalize_bio_gripper_glb.py  relocalize_gripper_glb.py  relocalize_lite6_gripper_glb.py  relocalize_lite6_vacuum_gripper_glb.py  select_dynamics_calib_poses.py  vendor_robot_assets.py  verify_bio_gripper_g2_assets.py  verify_gripper_g2_assets.py  verify_lite6_gripper_assets.py
tests/: test_dynamics_pose_selection.py  test_dynamics_validation.py  test_kinematics_sn.py  test_multi_robot_smoke.py  test_real_robot_session.py  test_robot_params.py  test_robot_registry.py  test_robot_viewer_controls.py  test_xarm6_lerobot_features.py  test_xarm6_smoke.py  test_xarm_control.py
ufactory/: __init__.py  bio_gripper_g2.py  dynamics_pose_selection.py  dynamics_validation.py  dynamics_verify.py  glb_visual.py  kinematics.py  kinematics_validation.py  paths.py  real_robot_session.py  robot_params.py  robot_registry.py  xarm_control.py
(+171 files in other folders)
