[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "genesis-ufactory"
version = "0.1.0"
description = "UFACTORY robot models and Genesis simulation tests"
requires-python = ">=3.12"

[tool.setuptools.packages.find]
where = ["."]
include = ["ufactory*"]

[tool.pytest.ini_options]
markers = [
    "hardware: tests requiring xArm SDK or real robot network",
]
